GNOME Bugzilla – Bug 766772
Spurious infinite recursive calls on errors
Last modified: 2019-05-01 21:56:07 UTC
Created attachment 328345 [details] [review] proposed fix Hello, Please see the attached patch: free_callback_para is calling itself on errors, thus leading to an infinite calling loop... Samuel
Fixed by 7ab4f1364c37a85a73aa2a593d76d43fd1613714 ('free_callback_para: Avoid calling oneself recursively on error')