free_callback_para: Avoid calling oneself recursively on error

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=766772